force-app/main/default/objects/Display__c/Display__c.object-meta.xml
<CustomObject>
    <label>Display</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Displays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>