force-app/main/default/objects/Display__c/fields/Competetior__c.field-meta.xml
<CustomField>
    <fullName>Competetior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor</label>
    <type>Checkbox</type>
</CustomField>