force-app/main/default/objects/Display__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes the sighted display</description>
    <label>Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>