force-app/main/default/objects/Display__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Sales_Org</valueSetName>
    </valueSet>
</CustomField>