force-app/main/default/objects/Display__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of display.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dump Bin</fullName>
            </value>
            <value>
                <fullName>Freestanding</fullName>
            </value>
            <value>
                <fullName>Glorifier</fullName>
            </value>
            <value>
                <fullName>Isle</fullName>
            </value>
            <value>
                <fullName>Shelf</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>